--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<p>Ok this time I swear this is the actual link</p><a href="https://docs.google.com/document/d/1HvmLHZ-FmAeoMO2S9vDpVHICQxMKj9H2QmjIQ0SViJE/edit?usp=sharing"><p>link</p></a>
+<p>Was it even a joke in the first place?</p><a href="https://docs.google.com/document/d/1HvmLHZ-FmAeoMO2S9vDpVHICQxMKj9H2QmjIQ0SViJE/edit?usp=sharing"><p>link</p></a>
 </body>
 </html>
